--- a/basics/auto/config
+++ b/basics/auto/config
@@ -1,6 +1,4 @@
-#!/bin/sh
-
-set -e
+#!/bin/sh -e
 
 CP_USERNAME=pirat
 CP_HOSTNAME=codingpirates
@@ -29,8 +27,10 @@ lb config noauto \
           --mirror-bootstrap http://ftp.dk.debian.org/debian/ \
           --mirror-binary http://ftp.dk.debian.org/debian/ \
           --mode debian \
+          --security true \
+          --win32-loader false \
           --archive-areas "main contrib non-free" \
-          --firmware-chroot true
-          "${@}"
+          --firmware-chroot true \
+          ${@}
 
 #nouveau.modeset=0
