Updated Scratch3.desktop to match changes in update_scratch3.sh

--- a/data/Scratch3/Scratch3.desktop
+++ b/data/Scratch3/Scratch3.desktop
@@ -4,7 +4,7 @@ Name=Scratch 3
 Comment=Scratch 3 offline edition
 GenericName=Scratch 3 editor
 X-GNOME-FullName=Scratch 3
-Exec=/opt/Scratch3/run.sh
+Exec=/usr/bin/scratch3
 Terminal=false
 X-MultipleArgs=false
 Type=Application
