--- a/data/Firefox.desktop
+++ b/data/Firefox.desktop
@@ -13,3 +13,8 @@ Categories=Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/vnd.mozilla.xul+xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;
 StartupWMClass=Firefox
 StartupNotify=true
+Actions=NewPrivate
+
+[Desktop Action NewPrivate]
+Exec=/opt/Mozilla/firefox/firefox --private-window
+Name=New Private Window
