--- a/test/apt/Dockerfile
+++ b/test/apt/Dockerfile
@@ -1,3 +1,3 @@
 FROM debian:stable
 
-RUN apt-get update && apt-get -y install gnupg
+RUN apt-get update && apt-get -y install gnupg ca-certificates
