Added extra components to source list

--- a/test/apt/Dockerfile
+++ b/test/apt/Dockerfile
@@ -1,3 +1,4 @@
 FROM debian:bullseye
 
+RUN sed -i "s/main/main contrib non-free/" /etc/apt/sources.list
 RUN apt-get update && apt-get -y install gnupg ca-certificates wget curl nano
