Added wireshark group to pirat

--- a/basics/config/includes.chroot/etc/live/config.conf.d/cpos-setup.conf
+++ b/basics/config/includes.chroot/etc/live/config.conf.d/cpos-setup.conf
@@ -1,6 +1,6 @@
 LIVE_HOSTNAME=codingpirates
 LIVE_USERNAME=pirat
-LIVE_USER_DEFAULT_GROUPS="audio cdrom dip floppy video plugdev netdev powerdev scanner bluetooth docker"
+LIVE_USER_DEFAULT_GROUPS="audio cdrom dip floppy video plugdev netdev powerdev scanner bluetooth docker wireshark"
 LIVE_LOCALES=da_DK.UTF-8
 LIVE_TIMEZONE=Europe/Copenhagen
 LIVE_KEYBOARD_LAYOUTS=dk
