Implemented optional proxy in APT tests

--- a/test/apt/Dockerfile
+++ b/test/apt/Dockerfile
@@ -1,8 +1,7 @@
-FROM debian:bookworm
+FROM darkmagus/codingpiratesos:latest
 
-RUN sed -i "s/Components: main/Components: main contrib non-free non-free-firmware/" /etc/apt/sources.list.d/debian.sources
 RUN dpkg --add-architecture i386
+RUN sed -i "s/Components: main/Components: main contrib non-free non-free-firmware/" /etc/apt/sources.list.d/debian.sources
 RUN apt-get update && apt-get upgrade -y
-Run apt-get -y install gnupg ca-certificates wget curl nano
 
 ENTRYPOINT ["/docker-run.sh"]
